devel
-----

* Web UI [FE-48]: Additional fix to the previously introduced license
  information usability improvement. In case the server is being started with
  the additional parameter `--server.harden`, the previous fix did not handle
  that specific edge case.

* Use more compact and efficient representation for arrays and objects during
  AQL AST serialization and deserialization. This can help to reduce the size
  of messages exchanged between coordinator and database servers during query
  setup, and also reduce the time needed for parsing these messages. This 
  especially helps when there are large bind parameter values that are arrays
  or objects.
  The more efficient format is used also inside an AQL query's "explain" and 
  "profile" methods, and thus any callers that process the return values of
  explain and profile operations may now receive the new format. All callers
  inside the ArangoDB code have been adjusted, but any external callers that
  process the JSON response values of AQL query explain or profile operations
  may need to be adjusted to handle the new format.

* Allow cluster database servers to start even when there are existing databases
  that would violate the settings `--cluster.min-replication-factor` or
  `--cluster.max-replication-factor`.
  This allows upgrading from older versions in which the replication factor
  validation for databases was not yet present.

* Added new stage "instantiating executors" to the query profiling output.
  The time spent in "instantiating executors" is the time needed to create
  the query executors from the final query execution time. In cluster mode,
  this stage also includes the time needed for physically distributing the 
  query snippets to the participating database servers.
  Previously, the time spent for instantiating executors and the physical
  distribution was contained in the "optimizing plan" stage, which was
  misleading.
